--- a/my-app/src/components/header/header.css
+++ b/my-app/src/components/header/header.css
@@ -1,5 +1,3 @@
-
-
 .header {
   margin-top: 60px;
 }
@@ -8,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: "Lora", serif;
+  font-family: "Montserrat", serif;
   color: #444;
 }
 
