--- a/my-app/src/components/topbar/topbar.css
+++ b/my-app/src/components/topbar/topbar.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   z-index: 999;
-  font-family: "'Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .topLeft,
