--- a/my-app/src/components/post/post.css
+++ b/my-app/src/components/post/post.css
@@ -19,7 +19,7 @@
 }
 
 .postCat {
-  font-family: "Varela Round", Arial, Helvetica, sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
   font-size: 11px;
   color: #be9656;
@@ -30,7 +30,7 @@
 }
 
 .postTitle {
-  font-family: "Montserrat", Arial, Helvetica, sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 24px;
   font-weight: 900;
   margin-top: 15px;
