--- a/my-app/src/components/singlePost/singlepost.css
+++ b/my-app/src/components/singlePost/singlepost.css
@@ -19,13 +19,13 @@
 .singlePostTitle {
   text-align: center;
   margin: 10px;
-  font-family: "Lora", serif;
+  font-family: "Montserrat", serif;
   font-size: 28px;
 }
 
 .singlePostTitleInput {
   margin: 10px;
-  font-family: "Lora", serif;
+  font-family: "Montserrat", serif;
   font-size: 28px;
   text-align: center;
   border: none;
@@ -48,11 +48,11 @@
 }
 
 .singlePostIcon:first-child {
-  color: teal;
+  color: #4a4e69;
 }
 
 .singlePostIcon:last-child {
-  color: tomato;
+  color: #e07a5f;
 }
 
 .singlePostInfo {
@@ -60,7 +60,7 @@
   display: flex;
   justify-content: space-between;
   font-size: 16px;
-  font-family: "Varela Round", sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #b39656;
 }
 
@@ -89,7 +89,7 @@
 .singlePostButton {
   width: 100px;
   border: none;
-  background-color: teal;
+  background-color: #4a4e69;
   padding: 5px;
   color: white;
   border-radius: 5px;
