--- a/my-app/src/pages/write/write.css
+++ b/my-app/src/pages/write/write.css
@@ -61,7 +61,7 @@
   top: 20px;
   right: 50px;
   color: white;
-  background-color: teal;
+  background-color: #4a4e69;
   padding: 10px;
   border: none;
   border-radius: 10px;
